TinyUSDGen/TinyUSDGen/Headers/c-tinyusd.h

/*
 * Use lower snake case for string/token and value types.
 */

typedef uint16_t c_tinyusd_half_t;
/*
   Assume struct elements will be tightly packed in C11.
   TODO: Ensure struct elements are tightly packed.
 */
typedef struct {
  int x;
  int y;
} c_tinyusd_int2_t;
typedef struct {
  int x;
  int y;
  int z;
} c_tinyusd_int3_t;
typedef struct {
  int x;
  int y;
  int z;
  int w;
} c_tinyusd_int4_t;
typedef struct {
  uint32_t x;
  uint32_t y;
} c_tinyusd_uint2_t;
typedef struct {
  uint32_t x;
  uint32_t y;
  uint32_t z;
} c_tinyusd_uint3_t;
typedef struct {
  uint32_t x;
  uint32_t y;
  uint32_t z;
  uint32_t w;
} c_tinyusd_uint4_t;
typedef struct {
  c_tinyusd_half_t x;
  c_tinyusd_half_t y;
} c_tinyusd_half2_t;
typedef struct {
  c_tinyusd_half_t x;
  c_tinyusd_half_t y;
  c_tinyusd_half_t z;
} c_tinyusd_half3_t;
typedef struct {
  c_tinyusd_half_t x;
  c_tinyusd_half_t y;
  c_tinyusd_half_t z;
  c_tinyusd_half_t w;
} c_tinyusd_half4_t;
typedef struct {
  float x;
  float y;
} c_tinyusd_float2_t;
typedef struct {
  float x;
  float y;
  float z;
} c_tinyusd_float3_t;
typedef struct {
  float x;
  float y;
  float z;
  float w;
} c_tinyusd_float4_t;
typedef struct {
  double x;
  double y;
} c_tinyusd_double2_t;
typedef struct {
  double x;
  double y;
  double z;
} c_tinyusd_double3_t;
typedef struct {
  double x;
  double y;
  double z;
  double w;
} c_tinyusd_double4_t;
typedef struct {
  double m[4];
} c_tinyusd_matrix2d_t;
typedef struct {
  double m[9];
} c_tinyusd_matrix3d_t;
typedef struct {
  double m[16];
} c_tinyusd_matrix4d_t;
typedef struct {
  c_tinyusd_half_t imag[3];
  c_tinyusd_half_t real;
} c_tinyusd_quath_t;
typedef struct {
  float imag[3];
  float real;
} c_tinyusd_quatf_t;
typedef struct {
  double imag[3];
  double real;
} c_tinyusd_quatd_t;
typedef struct {
  void *data;  // opaque pointer to `std::vector<std::string>`.
} c_tinyusd_string_vector;